--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>WT Catalog Builder</title>
     <link href="../css/index.css" type="text/css" rel="stylesheet">
-    <script src="../js/CSInterface.js"></script>
+    <script type="text/javascript" src="../js/CSInterface.js"></script>
     <script type='text/javascript' lang='javascript' src='../saxon/SaxonceDebug/Saxonce.nocache.js' ></script>
-    <script src="../js/ui.js" ></script>
+    <script src="../js/catalogBuilder.js" ></script>
 </head>
 <body>
 <div class="main">
